--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -37,8 +17,7 @@ __pycache__/
 *.tgz
 *.tbz
 *.xz
-*.tar.gz
-*.rar
+*.zstd
 
 # Distribution / packaging
 .Python
